# Hue_Ros_Packages

./: Hue_ros_diagram.drawio  Overshoot_ex.txt  P_test_newAlgo.txt  P_test_oldAlgo.txt  README.md  position_log_No_GPS.txt  position_log_sync.txt  position_log_teleop.txt  position_log_total  position_log_total.txt
GUI/: fall_demo_day_v2.py  fill_testing.py  gui.py  requirements.txt
arduino_reader/: package.xml  setup.cfg  setup.py
arduino_reader/arduino_reader/: arduino_serial_node.py
arduino_reader_cpp/: CMakeLists.txt  package.xml
arduino_reader_cpp/src/: arduino_serial_node.cpp
calm_man_cpp/: CMakeLists.txt  package.xml
calm_man_cpp/src/: calm_man_node.cpp
custom_msg/: CMakeLists.txt  package.xml
custom_msg/msg/: GpsData.msg  TwoInt.msg
deadreck_cpp/: CMakeLists.txt  package.xml
deadreck_cpp/src/: deadreck_node.cpp
get_waypoints/: setup.cfg  setup.py
get_waypoints/get_waypoints/: Line_and_Arc.txt  Penn_P.txt  Penn_P_e10_BAD.txt  Penn_P_e18.txt  Penn_P_e8.txt  Square.txt  apple_logo.txt  apple_logo_e15.txt  apple_logo_e8.txt  line.txt  penn_crest_e5.txt  penn_crest_new_e4.txt  waypoint_from_txt_node.py  waypoint_node.py
gps_publisher/: package.xml  setup.py
gps_publisher/gps_publisher/: gps2_node.py  gps3_node.py  gps_launch.py  gps_node.py
gps_publisher/launch/: gps_launch.py  gps_launch_cpp.py  navigation_launch.py  navigation_launch_cpp.py  teleop_launch.py
gps_publisher_cpp/: CMakeLists.txt  package.xml
gps_publisher_cpp/src/: gps1_node.cpp  gps2_node.cpp  gps_fusion_node.cpp
gui/: package.xml  setup.py
gui/gui/: apple.txt  gui.py  image_processing.py  image_waypoints.txt  map_test.py  path.txt  requirements.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arduino_reader/lib/arduino_reader/: arduino_serial_node
install/arduino_reader/share/arduino_reader/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_msg/include/custom_msg/custom_msg/msg/: coordinates.hpp  gps_data.h  two_int.h
install/custom_msg/include/custom_msg/custom_msg/msg/detail/: coordinates__builder.hpp  coordinates__functions.c  coordinates__rosidl_typesupport_fastrtps_c.h  coordinates__rosidl_typesupport_introspection_cpp.hpp  coordinates__struct.h  coordinates__traits.hpp  gps_data__builder.hpp  gps_data__functions.h  gps_data__rosidl_typesupport_fastrtps_cpp.hpp  gps_data__rosidl_typesupport_introspection_c.h  gps_data__rosidl_typesupport_introspection_cpp.hpp  gps_data__struct.h  gps_data__struct.hpp  gps_data__traits.hpp  two_int__builder.hpp  two_int__functions.c  two_int__rosidl_typesupport_fastrtps_c.h  two_int__rosidl_typesupport_introspection_c.h  two_int__struct.hpp  two_int__traits.hpp  two_int__type_support.c  two_int__type_support.cpp  two_int__type_support.h
install/custom_msg/local/lib/python3.10/dist-packages/custom_msg/msg/: _two_int_s.c
install/custom_msg/share/ament_index/resource_index/parent_prefix_path/: custom_msg
install/custom_msg/share/custom_msg/: local_setup.sh  package.sh
install/custom_msg/share/custom_msg/cmake/: rosidl_cmake-extras.cmake
install/custom_msg/share/custom_msg/msg/: GpsData.idl
install/get_waypoints/lib/get_waypoints/: waypoint_from_txt_node  waypoint_node
install/get_waypoints/share/get_waypoints/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gps_publisher/lib/gps_publisher/: gps2_node  gps3_node  gps_node
install/gps_publisher/share/gps_publisher/: package.sh  package.xml
install/navigator/lib/navigator/: DeadReck  Log  Sync  TeleOp  TeleOpLite  kalman  navigation_node  navigation_node_no_GPS
install/navigator/share/navigator/: package.sh  package.xml
log/: latest_build
my_cpp_py_pkg/: CMakeLists.txt  package.xml
my_cpp_py_pkg/src/: cpp_node.cpp
navigator/: package.xml  setup.py
navigator/navigator/: DeadReck.py  Log.py  TeleOp.py  TeleOpLite.py  kalman.py  navigation_node.py  navigation_nodeLite.py  navigation_node_RTOS.py  navigation_node_no_GPS.py  sync.py
navigator_cpp/: CMakeLists.txt  package.xml
navigator_cpp/src/: navigation_node.cpp
